2009-10-24  Paul Smith  <psmith@gnu.org>

	* main.c (usage): Add --eval to the usage string.
	(switches): Add the --eval switch.
	(main): If --eval is given, add them to the simply-expanded variable
	-*-eval-flags-*- (necessary to allow recursion to work properly).
	(define_makeflags): Add -*-eval-flags-*- to MAKEFLAGS.

	* NEWS: Describe the new --eval command line argument.
	* doc/make.texi (Options Summary): Document --eval.

	* dep.h: eval_buffer() returns void.
	* read.c (eval_buffer): Ditto.
	(eval): Ditto.

	* variable.h (define_variable_cname): New macro for constant
	variable names.
	* default.c (set_default_suffixes): Use it.
	* main.c (main): Ditto.
	(handle_non_switch_argument): Ditto.
	(define_makeflags): Ditto.
	* read.c (read_all_makefiles): Ditto.
	* variable.c (define_automatic_variables): Ditto.

	* commands.c (dep_hash_cmp): Avoid casts.
	(dep_hash_1): Ditto.
	(dep_hash_2): Ditto.

2009-10-22  Boris Kolpackov  <boris@codesynthesis.com>

	* read.c (read_all_makefiles): Mark the default makefile dependency
	dontcare.

2009-10-07  Boris Kolpackov  <boris@codesynthesis.com>

	* read.c (do_undefine): Free the expanded variable name.

	* commands.c (dep_hash_cmp, set_file_variables): Move the order-only
	to normal upgrade logic from  dep_hash_cmp to set_file_variables.

2009-10-06  Boris Kolpackov  <boris@codesynthesis.com>

	* dep.h (uniquize_deps): Remove.

	* read.c (uniquize_deps): Merge into set_file_variables in
	commands.c.
	(dep_hash_1, dep_hash_2, dep_hash_cmp): Move to commands.c.

	* commands.c (set_file_variables): Avoid modifying the dep
	chain to achieve uniqueness. Fixes savannah bug 25780.

	* implicit.c (pattern_search): Instead of re-setting all automatic
	variables for each rule we try, just update $*.

2009-10-06  Boris Kolpackov  <boris@codesynthesis.com>

	* variable.h (undefine_variable_in_set): New function declaration.
	(undefine_variable_global): New macro.
